adding scripts for vercel auto deployment

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "postinstall": "prisma generate",
     "build": "next build",
+    "dev": "next dev",
     "start": "next start",
-    "lint": "eslint",
-    "seed:admin": "node scripts/seed-admin.mjs"
+    "lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "5.18.0",
